Remove useless extraJvmArguments