@@ -167,7 +167,6 @@
                 <configuration>
                     <extraJvmArguments>
                         --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-opens=io.sdmx=ALL-UNNAMED
                     </extraJvmArguments>
                     <programs>
                         <program>
